fix: fetch the packet metadata from skb headers

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,5 +18,4 @@ jobs:
         curl -L https://git.io/misspell | bash
     - name: Spell Check
       run: |
-        find . -type f | grep -v vmlinux.h | xargs ./bin/misspell
-
+        find . -type f | grep -v vmlinux.h | grep -v libbpf | xargs ./bin/misspell
