--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ctrlc = "3.1"
 nix = { version = "0.24", default-features = false, features = ["net", "user"] }
 clap = { version = "3.1", default-features = false, features = ["std", "derive"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
+lazy_static = "1.4.0"
 
 [build-dependencies]
 libbpf-cargo = "0.12"
